# applied-ml-farris

./: .gitignore  404.html  README.md  index.html  lab5_farris.ipynb  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/notebooks/project02/: ml02_farris.ipynb
docs/project02/: EXAMPLE_ANALYSIS.md  README.md
docs/project03/: ANALYSIS.md  README.md
docs/project04/: README.md
docs/project05/: README.md  ensemble-farris.md
notebooks/example01/: lab1_starter_example.ipynb
notebooks/example02/: lab2_starter.ipynb
notebooks/project01/: ml01.ipynb  ml01_farris.ipynb
notebooks/project02/: README.md  ml02_farris.ipynb
notebooks/project03/: README.md  ml03_farris.ipynb
notebooks/project04/: README.MD  ml04_farris.ipynb
notebooks/project05/: README.md  ensemble-farris.ipynb
project01/: index.html
project01/EXAMPLE_ANALYSIS/: index.html
project02/: index.html
project03/: index.html
project04/: index.html
search/: search_index.json
