# pyproject.toml: Modern Python project configuration

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80", "wheel"]

[project]
authors = [{name = "Joanna Farris"}]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
description = "Applied ML Template"
name = "analytics-project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
version = "0.0.1"

dependencies = [ # fmt: off
  "loguru",
  "matplotlib",
  "numpy",
  "pandas",
  "seaborn",
  "ipython",
  "ipykernel",
  "scikit-learn",
  "nbconvert>=7.16.6",
  "mkdocs-jupyter>=0.25.1",
]  # fmt: on

[project.urls]
"Bug Tracker" = "https://github.com/Pojetta/applied-ml-farris/issues"  # CHANGED
Documentation = "https://pojetta.github.io/applied-ml-farris/"
Homepage = "https://github.com/pojetta/applied-ml-farris"
Repository = "https://github.com/pojetta/applied-ml-farris"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
]
docs = [
  "mkdocs",                # Core MkDocs
  "mkdocs-material",       # Theme
  "mkdocstrings[python]",  # API docs
  "pymdown-extensions",    # OPTIONAL: avoids Material ext issues in CI
  "mkdocs-jupyter",
  "livereload",
  "watchdog",
  "ruff",                  # For mkdocstrings signature formatting
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = [".venv", ".ruff_cache", "build", "dist", "*.egg-info", ".eggs", "__pycache__", "tests"]
fix = true
line-length = 100
preview = false
target-version = "py312"
unsafe-fixes = false

[tool.ruff.format]
line-ending = "lf"
quote-style = "preserve"

[tool.ruff.lint]
extend-select = [
  "F","W","E","I","UP","C4","C408","D","Q","S","C90","N","B","A","PTH","RET","SIM","TID","TCH",
]
ignore = ["E501","D203","D213","D413","S101"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["D104"]
"tests/**/*.py" = ["TID251","TID252","S101","D"]
"notebooks/**/*.ipynb" = ["F821"]

[tool.pyright]
extraPaths = ["src"]
include = ["src"]
pythonVersion = "3.12"
reportMissingImports = "warning"
reportPrivateUsage = "none"
typeCheckingMode = "basic"
useLibraryCodeForTypes = false
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
